--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@storybook/react": "^7.5.1",
     "@storybook/react-webpack5": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^29.5.6",
     "@types/react": "^18.2.29",
     "babel-jest": "^29.7.0",
@@ -45,7 +45,8 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
